# ArcWelderLib

./: .gitignore  ArcWelder.sln  ArcWelderLib.sln  CMakeLists.txt  CMakeSettings.json  Makefile  readme.md
.github/workflows/: ccpp.yml
ArcWelder/: ArcWelder.vcxproj  ArcWelder.vcxproj.filters  CMakeLists.txt  Makefile  arc_welder.cpp  arc_welder.h  segmented_arc.cpp  segmented_arc.h  segmented_shape.cpp  segmented_shape.h  sourcelist.cmake
ArcWelderConsole/: --path-tolerance=0.001  ArcWelderConsole.cpp  ArcWelderConsole.h  ArcWelderConsole.vcxproj  ArcWelderConsole.vcxproj.filters  CMakeLists.txt  Makefile  sourcelist.cmake
ArcWelderInverseProcessor/: ArcWelderInverseProcessor.cpp  ArcWelderInverseProcessor.h  ArcWelderInverseProcessor.vcxproj  ArcWelderInverseProcessor.vcxproj.filters  CMakeLists.txt  Makefile  arc_interpolation.cpp  arc_interpolation.h  firmware.cpp  firmware.h  firmware_types.cpp  firmware_types.h  inverse_processor.cpp  inverse_processor.h  marlin_1.cpp  marlin_1.h  marlin_2.cpp  marlin_2.h  marlin_2_arc.cpp  marlin_2_arc.h  prusa.cpp  prusa.h  repetier.cpp  repetier.h  repiter_arc.cpp  repiter_arc.h  smoothieware.cpp  smoothieware.h  sourcelist.cmake
ArcWelderTest/: ArcWelderTest.cpp  ArcWelderTest.h  ArcWelderTest.vcxproj  ArcWelderTest.vcxproj.filters
GcodeProcessorLib/: CMakeLists.txt  GcodeProcessorLib.vcxproj  GcodeProcessorLib.vcxproj.filters  Makefile  array_list.h  logger.cpp  position.h  sourcelist.cmake  utilities.cpp  utilities.h  version.generated.h.in  version.h
GcodeProcessorLib/deploy/: version.h
PyArcWelder/: CMakeLists.txt  PyArcWelder.vcxproj  PyArcWelder.vcxproj.filters  py_arc_welder.cpp  py_arc_welder.h  py_arc_welder_extension.cpp  py_arc_welder_extension.h  sourcelist.cmake
TCLAP/: CMakeLists.txt  TCLAP.vcxproj  TCLAP.vcxproj.filters
TCLAP/tclap/: tclap_version.h
